tests/NormalTests/paczka1/fuzzy1/78108076.err
Error in line 20: wQB A846 65,4
Error in line 33: kji1nkA A471 50,2
